--- a/index.html
+++ b/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Horizons</title>
     <!-- add bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body class="bg-success bg-opacity-10">
     <header>
-        <!-- search area -->
-        <h1 class="text-center text-success fw-bold">Mobile Horizons</h1>      
+        <!-- phone search area -->
+        <h1 class="text-center text-success fw-bold">Mobile Horizons</h1>
         <div class="input-group mb-3 w-50 mx-auto">
             <!-- search field -->
-            <input id="search-field" type="text" class="form-control" placeholder="Search the phone you want" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <input id="search-field" type="text" class="form-control" placeholder="Search the phone you want"
+                aria-label="Recipient's username" aria-describedby="button-addon2">
             <!-- search button -->
-            <button onclick="searchPhone()" class="btn btn-outline-success" type="button" id="button-search">Search</button>
-          </div>
+            <button onclick="searchPhone()" class="btn btn-outline-success" type="button"
+                id="button-search">Search</button>
+        </div>
     </header>
     <main>
-        
+        <section>
+            <!-- phone search result -->
+            <div id="search-result" class="row row-cols-1 row-cols-md-4 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text"> longer.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
-    
+
     <!-- add bootstrap script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <!-- link javascript -->
     <script src="js/script.js"></script>
 </body>
+
 </html>
