phone search area done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg-success bg-opacity-10">
     <header>
         <!-- phone search area -->
-        <h1 class="text-center text-success fw-bold">Mobile Horizons</h1>
+        <h1 class="text-center text-success fw-bold my-5">Mobile Horizons</h1>
         <div class="input-group mb-3 w-50 mx-auto">
             <!-- search field -->
             <input id="search-field" type="text" class="form-control" placeholder="Search the phone you want"
@@ -24,19 +24,11 @@
                 id="button-search">Search</button>
         </div>
     </header>
-    <main>
+    <main class="container">
         <section>
             <!-- phone search result -->
-            <div id="search-result" class="row row-cols-1 row-cols-md-4 g-4">
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text"> longer.</p>
-                        </div>
-                    </div>
-                </div>
+            <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 my-5">
+                
             </div>
         </section>
 
