--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     </header>
     <main class="container">
         <section>
+            <!-- single phone details area -->
+            <div id="phone-details" class="mx-auto mt-5">
+
+            </div>
             <!-- phone search result -->
             <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 my-5">
                 
