--- a/index.html
+++ b/index.html
@@ -1,83 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mobile Horizons</title>
-    <!-- bootstrap css file -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <!-- External css link -->
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body class="bg-success bg-opacity-10">
-    <!-- search area start -->
-    <header>
-      <h1 class="text-center text-success fw-bold m-5">Mobile Horizons</h1>
-      <div class="input-group mb-3 w-50 mx-auto">
-        <input
-          id="search-field"
-          type="text"
-          class="form-control"
-          placeholder="Search the phone you want"
-          aria-label="Search for a meal"
-          aria-describedby="search-button"
-        />
-        <button
-          class="btn btn-outline-success"
-          type="button"
-          id="search-button"
-          onclick="findMobile()"
-        >
-          Search
-        </button>
-      </div>
-    </header>
-    <!-- search area end -->
 
-    <main class="container">
-      <!-- spinner area start -->
-      <section>
-        <div class="d-flex justify-content-center">
-          <div
-            id="spinner"
-            class="spinner-border text-success my-5"
-            role="status"
-          >
-            <span class="sr-only"></span>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mobile Horizons</title>
+  <!-- bootstrap css file -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <!-- External css link -->
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body class="bg-success bg-opacity-10">
+  <!-- search area start -->
+  <header>
+    <h1 class="text-center text-success fw-bold m-5">Mobile Horizons</h1>
+    <div class="input-group mb-3 w-50 mx-auto">
+      <input id="search-field" type="text" class="form-control" placeholder="Search the phone you want"
+        aria-label="Search the phone you want" aria-describedby="search-button" />
+      <button class="btn btn-outline-success" type="button" id="search-button" onclick="findMobile()">
+        Search
+      </button>
+    </div>
+  </header>
+  <!-- search area end -->
+
+  <main class="container">
+
+    <!-- spinner area start -->
+    <section>
+      <div class="d-flex justify-content-center">
+        <div id="spinner" class="spinner-border text-success my-5" role="status">
+          <span class="sr-only"></span>
         </div>
-      </section>
-      <!-- spinner area end -->
+      </div>
+    </section>
+    <!-- spinner area end -->
 
-      <!-- single phone details area start -->
-      <section id="phone-details" class="mb-5"></section>
-      <!-- single phone details area end -->
+    <!-- single phone details area start -->
+    <section id="phone-details" class="mb-5"></section>
+    <!-- single phone details area end -->
 
-      <!-- display phones area start -->
-      <section id="search-results">
-        <div
-          id="search-results-area"
-          class="row row-cols-1 row-cols-md-3 g-4"
-        ></div>
-      </section>
-      <!-- display phones area end -->
-    </main>
+    <!-- display phones area start -->
+    <section id="search-results">
+      <div id="search-results-area" class="row row-cols-1 row-cols-md-3 g-4"></div>
+    </section>
+    <!-- display phones area end -->
+  </main>
 
-    
 
-    <!-- script files -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <!-- External script files -->
-    <script src="js/script.js"></script>
-  </body>
+
+  <!-- script files -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!-- External script files -->
+  <script src="js/script.js"></script>
+</body>
+
 </html>
