--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mobile Horizons</title>
+  <title>Phone Horizons</title>
+  <!-- mobile horizones -->
   <!-- bootstrap css file -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
@@ -37,7 +38,7 @@
         </div>
       </div>
     </section>
-    <!-- spinner area end -->
+    <!-- spinner area  end -->
 
     <!-- single phone details area start -->
     <section id="phone-details" class="mb-5"></section>
